--- a/Requirements.txt
+++ b/Requirements.txt
@@ -1,9 +1,8 @@
-plotly == 5.3.0
-seaborn == 0.11.2
-numpy == 1.24.0
-matplotlib == 3.6.3
-pandas == 1.5.3
+plotly
+seaborn
+numpy
+matplotlib
+pandas
 scikit-learn
 streamlit
-seaborn
 
